ARM Template/VNET_template/Virtualmacine/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
           "defaultValue": "[resourceGroup().location]"
                },
                "VM_size": {
                    "type": "string",
                    "metadata": {
                        "description": "Size of vitual machine"
                    },
                    "defaultValue": "standard_DS2_v2_Promo"
                                },
         "adminuser": {
            "type": "string"
                    },
                    "adminpassword": {
                        "type": "string"
                                           }
    },
    "functions": [],
    "variables": {
        "storage_account_name": "ARMstore270224",
        "tags": {
            "project":"armproject",
            "department":"IT-cloud"
        },
        "public_ip_name": "arm_PIP",
        "nsg_name": "arm_nsg",
        "VNET_name": "ARM_vnet",
        "Subnet_name": "ARM-sbnt1",
        "nic_name": "ARM_nic",
        "VMname": "ARMVM"
    },
    "resources": [
        {
            "name": "[toLower(variables('storage_account_name'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-01-01",
            "location": "[parameters('location')]",
            "tags":"[variables('tags')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "StorageV2"
        },
        {
            "name": "[variables('public_ip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-04-01",
            "location": "[parameters('location')]",
            "tags":"[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Static"                
            }
        },
        {
            "name": "[variables('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-04-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "RDP_allow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "HTTP_allow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('VNET_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-04-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsg_name'))]"
            ],
            "tags":"[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('Subnet_name')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/25",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('nic_name')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-04-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses',variables('public_ip_name') )]",
                "[resourceId('Microsoft.Network/virtualNetworks',variables('VNET_name'))]"
            ],
            "tags":"[variables('tags')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('public_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('VNET_name'),variables( 'Subnet_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('VMname')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(variables('storage_account_name')))]",
                "[resourceId('Microsoft.Network/networkInterfaces',variables('nic_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize":"[parameters('VM_size')]"
                },
                "osProfile": {
                    "computerName": "[variables('VMname')]",
                    "adminUsername": "[parameters('adminuser')]",
                    "adminPassword": "[parameters('adminpassword') ]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(variables('VMname'),'-','osdisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nic_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(variables('storage_account_name')))).primaryEndpoints.blob]"
                    }
                }
            }
        }
    ],
    "outputs": {}
}
